# paper-trading-terminal

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  config.toml  install  install.ps1
.github/workflows/: ci.yml  release.yml  test-install.yml
.homebrew/Casks/: paper-trading-terminal.rb
.scoop/: paper.json
crates/cli-candlestick-chart/: Cargo.toml
crates/cli-candlestick-chart/src/: chart_data.rs  lib.rs  line_chart.rs  y_axis.rs
data/: test_fcontext_config.toml  test_mock_config.toml
docs/: agent-install.md
examples/: capture_tui_screenshot.rs
scripts/: build_release.sh  ci.sh  package_release.sh
scripts/lib/: binary.sh
scripts/test/: test_cli.sh  test_fcontext.sh
src/: config.rs  db.rs  lib.rs  main.rs  skill.rs  utils.rs
src/cli/: commands.rs  mod.rs  output.rs
src/engine/: account.rs  executor.rs  market_rules.rs  mod.rs  order.rs  tradability.rs
src/provider/: cache.rs  cli_runner.rs  fallback.rs  fcontext.rs  mock.rs  mod.rs  yahoo.rs  yahoo_stub.rs
src/tui/: app.rs  kline.rs  mod.rs  order_entry.rs  preview.rs  screenshot.rs
src/tui/ui/: layout.rs  mod.rs  styles.rs  text.rs
src/tui/widgets/: ansi.rs  chart.rs  mod.rs  orders.rs  positions.rs  watchlist.rs
src/upgrade/: mod.rs
